<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.empresa_xyz.principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/material"
                android:textAlignment="center"
                android:layout_weight="1.05" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:text="@string/dije"
                android:textAlignment="center"
                android:layout_weight="2.21" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="113dp"
                android:layout_height="29dp"
                android:text="@string/tipo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Spinner
                android:id="@+id/cmbmaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/cmbdije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/cmbtipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Spinner
            android:id="@+id/cmbTipoMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <EditText
            android:id="@+id/txtcantidadManillas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:hint="@string/cantidadManillas"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblValorManilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/valorManilla" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:onClick="calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:onClick="borrar"
            android:text="@string/borrar" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
